--- a/src/main/resources/templates/vmstat.html
+++ b/src/main/resources/templates/vmstat.html
@@ -1,4 +1,4 @@
-﻿<script type="text/javascript" src="${appRoot}/res/ui/vmstat.js"></script>
+<script type="text/javascript" src="${appRoot}/res/ui/vmstat.js"></script>
 <script type="text/javascript">
 // <![CDATA[
 var statData = ${startData};
