[QA-9744] Adjusted CSS style of the warning box
git-svn-id: https://devtools.jahia.com/svn/patches/trunk@147 30545e79-4b65-4b5b-b252-900922a36c70

--- a/src/main/resources/templates/main_header.html
+++ b/src/main/resources/templates/main_header.html
@@ -57,7 +57,7 @@
 
         <div id="dx-warning">
             <fieldset
-                class="statline ui-widget ui-widget-content statusline ui-state-highlight">
+                class="ui-widget ui-widget-content ui-state-highlight" style="margin-top: .5em !important; margin-bottom: .5em !important; padding: .2em;">
                 <legend style="font-weight: bold">Warning</legend>
                 <p>Please, note, when using DX in a clustered mode, this console tool should be used for information purpose only.<br/>
                 The actions, performed from this tool, are local-only. To perform any action on a bundle, please, use the corresponding DX module management tools, which are cluster-aware.
