[QA-9744] Added warning about using bundle actions from OSGi Web console in clustered mode
git-svn-id: https://devtools.jahia.com/svn/patches/trunk@146 30545e79-4b65-4b5b-b252-900922a36c70

--- a/src/main/resources/templates/main_header.html
+++ b/src/main/resources/templates/main_header.html
@@ -54,4 +54,15 @@
 				<a rel="external" href="${brand.product.url}" title="${brand.product.name}"><img src="${brand.product.img}" alt="Logo" /></a>
 			</p>
 		</div>
+
+        <div id="dx-warning">
+            <fieldset
+                class="statline ui-widget ui-widget-content statusline ui-state-highlight">
+                <legend style="font-weight: bold">Warning</legend>
+                <p>Please, note, when using DX in a clustered mode, this console tool should be used for information purpose only.<br/>
+                The actions, performed from this tool, are local-only. To perform any action on a bundle, please, use the corresponding DX module management tools, which are cluster-aware.
+                </p>
+            </fieldset>
+        </div>
+
 		<div class="ui-helper-clearfix" style="height:0px">&nbsp;</div>
