--- a/src/main/resources/res/ui/config.css
+++ b/src/main/resources/res/ui/config.css
@@ -63,6 +63,7 @@ input.placeholder-active { color: #AAA !important }
 
 .topPaddedText {
 	padding-top: 0.4em !important;
+	white-space: pre-wrap;
 }
 
 .iconMarginTop {
